openshift/allow-traffic-airflow.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-web-proxy
spec:
  podSelector:
    matchLabels:
      Release: airflow
  egress:
    - ports:
        - protocol: TCP
          port: 8080
      to:
        - ipBlock:
            cidr: 142.34.229.249/32
        - ipBlock:
            cidr: 142.34.94.249/32
  policyTypes:
    - Egress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-zone-b
spec:
  podSelector:
    matchLabels:
      ConnectionType: database
  egress:
    - ports:
        - protocol: TCP
          port: 1521
        - protocol: TCP
          port: 5435
        - protocol: TCP
          port: 5436
  policyTypes:
    - Egress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-same-namespace
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}
  egress:
    - to:
        - podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-a9cb09-namespace
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}
          namespaceSelector:
            matchLabels:
              name: a9cb09
  egress:
    - to:
        - podSelector: {}
          namespaceSelector:
            matchLabels:
              name: a9cb09
  policyTypes:
    - Ingress
    - Egress
